value list less fix. add text align - center

--- a/tpl/app/less/stb/ui/value.list.less
+++ b/tpl/app/less/stb/ui/value.list.less
@@ -1,5 +1,6 @@
 .component.valueList {
     border: unit(@inputBorder, px) solid grey;
+    text-align: center;
     &.focus {
         border-color: orange;
     }
